omni/tests/goldens/types/undefined_ident_09.omni
let result9:int = missing9
